--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
+  thingsboard_client: ^1.0.2
+  provider: ^6.0.3
+  flutter_secure_storage: ^6.0.0
 
 dev_dependencies:
   flutter_test:
