Add provider for thingsboard_client_base & tbStorage to store user info.
Remove '#' on the url
install package:
$ flutter pub add url_strategy
Reference:
https://github.com/flutter/flutter/issues/33245#issuecomment-760214554

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.3
   flutter_secure_storage: ^6.0.0
   flutter_dotenv: ^5.0.2
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
