--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   flutter_dotenv: ^5.0.2
   url_strategy: ^0.2.0
+  syncfusion_flutter_charts: ^20.2.48
 
 dev_dependencies:
   flutter_test:
