--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  integration_test:
+    sdk: flutter
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -47,8 +49,12 @@ dependencies:
   json_annotation: ^4.7.0
   dio: ^4.0.6
   jwt_decoder: ^2.0.1
+  path: ^1.8.2
+  http: ^0.13.5
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
@@ -61,6 +67,7 @@ dev_dependencies:
   build_runner: ^2.3.2
   freezed: ^2.2.0
   json_serializable: ^6.5.3
+  http_mock_adapter: ^0.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
