Add preferences page and select language function
Install Package:
$ flutter pub add restart_app

Refer to :
https://github.com/DeveloperLibs/flutter_localization
https://github.com/JohannesMilke/localization_arb_example
https://github.com/Daniel-Ioannou/flutter_country_picker/blob/master/lib/src/utils.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   path: ^1.8.2
   http: ^0.13.5
   data_table_2: ^2.3.8
+  restart_app: ^1.1.1
 
 dev_dependencies:
   flutter_driver:
@@ -89,6 +90,7 @@ flutter:
   assets:
     - assets/images/
     - .env
+    - lib/l10n/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
